[package]
name = "replier_bot"
version = "0.1.0"
edition = "2024"

[profile.release]
# Оптимизация по размеру
opt-level = "z"  # или "s" для менее агрессивной оптимизации
# Отключаем ненужные фичи
panic = "abort"   # Уменьшает размер, убирая unwinding
codegen-units = 1 # Лучшая оптимизация (но дольше компиляция)
lto = true        # Link-Time Optimization
strip = true      # Удаляет символы (уменьшает размер)

[dependencies]
dotenv = "0.15.0"
grammers-client = "0.7.0"
grammers-session = "0.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
