[package]
name = "zad"
version = "0.1.0"
edition = "2024"

[profile.release]
# Оптимизация по размеру
opt-level = "z"  # или "s" для менее агрессивной оптимизации
# Отключаем ненужные фичи
panic = "abort"   # Уменьшает размер, убирая unwinding
codegen-units = 1 # Лучшая оптимизация (но дольше компиляция)
lto = true        # Link-Time Optimization
strip = true      # Удаляет символы (уменьшает размер)

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin15-clang"
ar = "x86_64-apple-darwin15-ar"

[target.aarch64-apple-darwin]
linker = "aarch64-apple-darwin20-clang"
ar = "aarch64-apple-darwin20-ar"

[dependencies]
dotenv = "0.15.0"
grammers-client = "0.7.0"
grammers-mtsender = "0.7.0"
grammers-session = "0.7.0"
rand = "0.9.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "json", "macros", "uuid" ] }
